SERVER-77053 Transaction API shouldn't throw top level errors in runCommand